# outreach-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  sandbox-lane-result.txt
.github/workflows/: ci.yml
docs/: SESSION.md  delivery-plan.md  requirements.md
docs/adr/: ADR-001-outreach-agent-architecture.md  ADR-002-fix-generation.md
docs/critique/: architecture-critique.md
docs/findings/: smoke-fixgen-blocker.md
docs/qa/: acceptance-report.md
docs/release/: go-no-go-v0.1.0.md
docs/security/: adr-002-signoff.md  audit-step6.md  threat-model.md  v2.1-signoff.md
scripts/: check.ps1  verify_lock.py
src/outreach_agent/: __init__.py  __main__.py  approval.py  budget.py  cli.py  config.py  contracts.py  diff_checks.py  discovery.py  errors.py  fix_generator.py  github_gateway.py  graph_verify.py  llm_gateway.py  oauth.py  outbound_safety.py  persistence.py  policy.py  prep.py  profile_growth.py  publisher.py  report.py  review_monitor.py  sandbox.py  state_machine.py  tokens.py
tests/: README.md  conftest.py  test_approval.py  test_budget.py  test_budget_clock_edges.py  test_ci_config.py  test_claude_code_llm.py  test_cli.py  test_cli_base_branch.py  test_cli_defects.py  test_config.py  test_diff_checks.py  test_diff_checks_edges.py  test_discovery.py  test_fix_generator_security.py  test_fixture_repos.py  test_gateway.py  test_graph_verify.py  test_llm_gateway.py  test_no_client_outside_gateway.py  test_oauth.py  test_persistence.py  test_persistence_migrations.py  test_pipeline_e2e.py  test_policy.py  test_prep.py  test_production_gaps.py  test_profile_growth.py  test_publisher.py  test_report.py  test_review_monitor.py  test_sandbox.py  test_sandbox_command.py  test_sandbox_live.py  test_state_machine.py  test_state_machine_matrix.py
tests/fixtures/diffs/: crlf_bomb.diff
tests/fixtures/repos/: README.md
tests/fixtures/repos/hang/: pyproject.toml  test_hang.py
tests/fixtures/repos/nodejs-pass/: package-lock.json  package.json
tests/fixtures/repos/nodejs-pass/test/: add.test.js
tests/fixtures/repos/python-pass/: pyproject.toml  test_add.py
tests/fixtures/repos/rust-pass/: Cargo.toml
tests/fixtures/repos/rust-pass/.sbx-cargo/: .global-cache
tests/fixtures/repos/rust-pass/src/: lib.rs
