[project]
name = "sbx-hang"
version = "0.0.1"
description = "Sandbox fixture repo (F-10): a test that never terminates, to exercise the wall-clock timeout kill path."
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sbx_hang"]
