[project]
name = "sbx-python-pass"
version = "0.0.1"
description = "Sandbox fixture repo (F-08): minimal installable python package with one passing test."
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sbx_python_pass"]
